WEB-11426: Fix small styling errors and missing color variables."

--- a/app/assets/stylesheets/webcat_complaint_entries.scss
+++ b/app/assets/stylesheets/webcat_complaint_entries.scss
@@ -4,6 +4,8 @@ $type-lighter-color: #666;   /* Medium Grey */
 $faint-neutral-color: #f2f2f2;
 $type-base-color:    #333;   /* Dark Grey */
 $faint-accent-color:  #dff1f7;
+$nav-toolbar-color: #d7dadb;    /* Medium Grey     */
+$type-faint-accent: #D7DADB; /* Lighter Grey */
 
 .complaint-entry-show-content-wrapper {
   @-moz-document url-prefix() {
