--- a/app/assets/stylesheets/webcat_complaints.scss
+++ b/app/assets/stylesheets/webcat_complaints.scss
@@ -1,7 +1,8 @@
-@import 'colors';
+$super-faint-neutral: #f9f9f9;
+$table-dark-body: #4E4E4E;
+$nav-toolbar-color: #d7dadb;    /* Medium Grey     */
 
 .tool-bar {
-
     padding: 10px;
     background-color: #848484;
 }
